# quick-zip-cli

./: .env  .gitignore  404.html  README.md  config.toml  index.html  makefile  mkdocs.yml  pyproject.toml  scratch.py  tox.ini
.github/workflows/: build-docs.yml  publish-release.yml  pytest.yml  tox.yml
css/: custom.css  termynal.css
data/src/: text.txt
docs/: index.md
docs/code/: app-config.md  backup-job.md
docs/getting-started/: changelog.md  commands.md  configuration-file.md  quick-start.md  usage-examples.md
docs/js/: custom.js
docs_src/: config.toml  help.sh
docs_src/commands/: audit.sh  run.sh
getting-started/changelog/: index.html
getting-started/commands/: index.html
getting-started/configuration-file/: index.html
getting-started/quick-start/: index.html
getting-started/usage-examples/: index.html
quick_zip/: __init__.py  config-alt.json  config.json  config.toml  default.toml  main.py
quick_zip/commands/: config.py  jobs.py
quick_zip/core/: config.py  settings.py
quick_zip/schema/: backup_job.py  config.py
quick_zip/services/: auditer.py  backups.py  file_stats.py  ui.py  web.py  zipper.py
quick_zip/tests/: test_quick_zip.py
quick_zip/utils/: backup.py  cards.py  custom_logger.py  fstats.py
search/: search_index.json
tests/: conftest.py  test_main.py
tests/resources/: config-vars.json  config.json  config.toml
tests/resources/sort/: file_0.txt  file_1.txt  file_2.txt  file_3.txt  file_4.txt
tests/resources/src/: my_files.txt  temp_file.txt
tests/services_tests/: test_backups.py
(+1 files in other folders)
