[tool.poetry]
name = "quick_zip"
version = "v0.1.0"
description = ""
authors = ["hay-kot <hay-kot@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
mkdocs-material = "^7.0.6"
mkdocstrings = "^0.15.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
